<resources>
    <string name="app_name">Video Push Sample</string>
    <string name="app_long_name">Milestone MobileSDK Video Push Sample</string>
    <string name="app_version">Version</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="about">About</string>
    <string name="connection_settings">Login details</string>
    <string name="server_label">Server address</string>
    <string name="address_hint">Address</string>
    <string name="user_label">User name</string>
    <string name="user_name_hint">User name</string>
    <string name="password_label">Password</string>
    <string name="password_hint">Password</string>
    <string name="connect_fail">Could not connect</string>
    <string name="bad_address">Could not connect (bad address)</string>
    <string name="logging_in">Logging in…</string>
    <string name="connected">Connected</string>
    <string name="error">Error</string>
    <string name="login_fail">Failed to login</string>
    <string name="video_error">Error requesting video</string>
    <string name="status_disconnected">Disconnected</string>
    <string name="connecting">Connecting…</string>
    <string name="port_label">Port</string>
    <string name="port_hint">Port number</string>
    <string name="start_video_push">Start Video Push</string>
    <string name="stop_video_push">Stop Video Push</string>
    <string name="login">Login</string>
    <string name="audio_record_start">Recording Audio Started</string>
    <string name="audio_record_stop">Recording Audio Stopped</string>
    <string name="error_occur">Error occurred</string>
    <string name="error_request_stream">Error requesting stream id</string>
    <string name="connect">Connect</string>
    <string name="start">Start</string>
    <string name="stop">Stop</string>
    <string name="audio">Audio</string>
    <string name="dialog_about_message">"Video Push Sample of Milestone MobileSDK."</string>
    <string name="video_push_permissions_needed">You must allow %1$s app to access: camera and microphone.</string>
</resources>
